--- a/calc.css
+++ b/calc.css
@@ -35,6 +35,7 @@ body{
 
 .calculator span
 {
+     cursor: pointer;
     display: grid;
     width: 60px;
     height: 60px;
@@ -45,12 +46,14 @@ body{
 }
 
 .calculator span:active{
+     cursor: pointer;
     background: #74ff3b;
     color: #111;
 }
 
 .calculator span.clear
 {
+     cursor: pointer;
      grid-column: span 2;
     width: 120px;
     background: palevioletred;
@@ -58,6 +61,7 @@ body{
 
 .calculator span.plus
 {
+     cursor: pointer;
     grid-row: span 2;
     height: 120px;
     background: rebeccapurple;
@@ -65,7 +69,7 @@ body{
 
 .calculator span.equal
 {
-  
+   cursor: pointer;
     background: #03b1ff;
 }
 
